adding extra details to project page

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -48,6 +48,8 @@
                     <h1>{{project_name}} Formulas </h1>
                     <p><b>Client:</b> {{this.client}}</p>
                     <p><b>Date:</b> {{formatDate this.date}}</p>
+                    <p><b>Contact name: </b>{{client_name}}</p>
+                    <p><b>Contact email: </b>{{client_email}}</p>
                 </div>
         {{/each}}
 
