clear search redirect to right railway link

--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -311,7 +311,7 @@
 
     <script>
         function redirectToPage() {
-            const clearedUrl = "http://localhost:3000/inventory";
+            const clearedUrl = "https://tuluble-production.up.railway.app/inventory/";
             const currentUrl = window.location.href;
             
             if (currentUrl !== clearedUrl) {
