--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -76,7 +76,7 @@
 
                 <script>
                     function redirectToPage() {
-                        const clearedUrl = "http://localhost:3000/archive";
+                        const clearedUrl = "https://tuluble-production.up.railway.app/archive";
                         const currentUrl = window.location.href;
                         const word = "search"
                         const clear = document.querySelector('#clear-search');
