--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -64,73 +64,80 @@
                 </tr>
                 {{/each}}
                 <tr>
-                    <div class="col s12 m4 l2">
-                        <a href="#openProc" class="btn waves-effect waves-light luluble-pink modal-trigger" style = "margin-left: 25px; margin-bottom: 10px">Add</a>
+                    <div class="row">
+                        <div class="col s6">
+                            <a href="#openProc" class="btn waves-effect waves-light luluble-pink modal-trigger" style = "margin-left: 25px; margin-bottom: 10px">Add</a>
 
-                        <div class="modal" id="openProc">
-                            <div style="padding: 5% 5% 5% 5%">
-                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
-                                <h1 style="font-size:40px;">Add a New Step</h1>
+                            <div class="modal" id="openProc">
+                                <div style="padding: 5% 5% 5% 5%">
+                                    {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                    <h1 style="font-size:40px;">Add a New Step</h1>
 
-                                {{!-- somehow get the formula of the tab clicked on --}}
-                                <form method="POST" action="/projects/{{project_id}}/procedure{{trial_num}}/procformsubmit">
-                                    <article class="regular">
-                                        {{!-- <h2>Textbook</h2> --}}
+                                    {{!-- somehow get the formula of the tab clicked on --}}
+                                    <form method="POST" action="/projects/{{project_id}}/procedure{{trial_num}}/procformsubmit">
+                                        <article class="regular">
+                                            {{!-- <h2>Textbook</h2> --}}
 
-                                        {{!-- Field 1 --}}
-                                        <b><label for="tuluble">Phase:</label></b>
-                                        <input type="number" name = "userInput1" id="userInput1" placeholder="Enter Phase Number" maxlength="20">
-                                        <p> </p>
+                                            {{!-- Field 1 --}}
+                                            <b><label for="tuluble">Phase:</label></b>
+                                            <input type="number" name = "userInput1" id="userInput1" placeholder="Enter Phase Number" maxlength="20">
+                                            <p> </p>
 
-                                        {{!-- Field 2 --}}
-                                        <b><label for="tuluble">Procedure:</label></b>
-                                        <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Procedure" maxlength="300">
-                                        <p> </p>
+                                            {{!-- Field 2 --}}
+                                            <b><label for="tuluble">Procedure:</label></b>
+                                            <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Procedure" maxlength="300">
+                                            <p> </p>
 
-                                        {{!-- Field 3 --}}
-                                        <b><label for="tuluble">Comments/Ingredients:</label></b>
-                                        <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Comments" maxlength="300">
-                                        <p> </p>
+                                            {{!-- Field 3 --}}
+                                            <b><label for="tuluble">Comments/Ingredients:</label></b>
+                                            <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Comments" maxlength="300">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Initial Temperature (C):</label></b>
-                                        <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Initial Temperature" maxlength="20">
-                                        <p> </p>
+                                            <b><label for="tuluble">Initial Temperature (C):</label></b>
+                                            <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Initial Temperature" maxlength="20">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Final Temperature (C):</label></b>
-                                        <input type="number" name = "userInput5" id="userInput5" placeholder="Enter Final Temperature" maxlength="20">
-                                        <p> </p>
+                                            <b><label for="tuluble">Final Temperature (C):</label></b>
+                                            <input type="number" name = "userInput5" id="userInput5" placeholder="Enter Final Temperature" maxlength="20">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Timing (min):</label></b>
-                                        <input type="text" name = "userInput6" id="userInput5" placeholder="Enter Timing" maxlength="45">
-                                        <p> </p>
+                                            <b><label for="tuluble">Timing (min):</label></b>
+                                            <input type="text" name = "userInput6" id="userInput5" placeholder="Enter Timing" maxlength="45">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Initial Mixing (rpm):</label></b>
-                                        <input type="text" name = "userInput7" id="userInput5" placeholder="Enter Initial Mixing Speed" maxlength="20">
-                                        <p> </p>
+                                            <b><label for="tuluble">Initial Mixing (rpm):</label></b>
+                                            <input type="text" name = "userInput7" id="userInput5" placeholder="Enter Initial Mixing Speed" maxlength="20">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Final Mixing (rpm):</label></b>
-                                        <input type="text" name = "userInput8" id="userInput5" placeholder="Enter Final Mixing Speed" maxlength="20">
-                                        <p> </p>
+                                            <b><label for="tuluble">Final Mixing (rpm):</label></b>
+                                            <input type="text" name = "userInput8" id="userInput5" placeholder="Enter Final Mixing Speed" maxlength="20">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Mixer Type:</label></b>
-                                        <input type="text" name = "userInput9" id="userInput5" placeholder="Enter Mixer Type" maxlength="45">
-                                        <p> </p>
+                                            <b><label for="tuluble">Mixer Type:</label></b>
+                                            <input type="text" name = "userInput9" id="userInput5" placeholder="Enter Mixer Type" maxlength="45">
+                                            <p> </p>
 
-                                        <b><label for="tuluble">Blade:</label></b>
-                                        <input type="text" name = "userInput10" id="userInput5" placeholder="Enter Blade" maxlength="45">
-                                        <p> </p>
+                                            <b><label for="tuluble">Blade:</label></b>
+                                            <input type="text" name = "userInput10" id="userInput5" placeholder="Enter Blade" maxlength="45">
+                                            <p> </p>
 
-                                        <div class="add_proc_button">
-                                            <button id = "add_proc_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Procedure</button>
-                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
-                                        </div>
-                                        <p> </p>
-                                    </form>
+                                            <div class="add_proc_button">
+                                                <button id = "add_proc_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Procedure</button>
+                                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                            </div>
+                                            <p> </p>
+                                        </form>
 
-                                </article>
+                                    </article>
+                                </div>
                             </div>
                         </div>
+
+                        <div class="col s6 right-align">
+                            <button onclick="window.print()" id="create-pdf-button" name="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Print</button>
                         </div>
+
+                    </div>
                 </tr>
             </tbody>
         </table>
