--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -53,7 +53,7 @@
 
             <script>
                 function redirectToPage() {
-                    const clearedUrl = "https://tuluble-production.up.railway.app/projects";
+                    const clearedUrl = "http://localhost:3000/projects";
                     const currentUrl = window.location.href;
                     const word = "search"
                     const clear = document.querySelector('#clear-search');
