--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -219,9 +219,6 @@
                                         <input type="number" name = "userInput3" id="userInput3" placeholder="Enter Percent" maxlength="20">
                                         <p> </p>
 
-                                        <b><label for="tuluble">Total Amount of Ingredient:</label></b>
-                                        <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Total Amount" maxlength="20">
-                                        <p> </p>
 
                                         <div class="add_trial_button">
                                             <button id = "add_trial_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Ingredient</button>
@@ -244,7 +241,7 @@
                                 {{!-- somehow get the formula of the tab clicked on --}}
                     
 
-                                <form method="POST" action="/projects/{{project_id}}/makeformsubmit">
+                                <form method="POST" action="/projects/{{project_id}}/batchformsubmit">
                                     <article class="regular">
                                         {{!-- <h2>Textbook</h2> --}}
 
@@ -257,13 +254,13 @@
                                         <input type="number" name = "userInput1T" id="userInput1T">
                                         <p> </p>
 
-                                        <b><label for="tuluble">Quantity:</label></b>
+                                        <b><label for="tuluble">Quantity (g):</label></b>
                                         <input type="number" name = "userInput2T" id="userInput2T">
                                         <p> </p>
 
                                        
                                         <div class="make_trial_button">
-                                            <button id = "make_trial_button" onclick="postMessage()" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Make Trial</button>
+                                            <button id = "make_trial_button" onclick="postMessage()" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">BATCH</button>
                                             {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                         </div>
                                         <p> </p>
@@ -282,7 +279,6 @@
                             var inputValue1 = $("#userInput1").val();
                             var inputValue2 = $("#userInput2").val();
                             var inputValue3 = $("#userInput3").val();
-                            var inputValue4 = $("#userInput4").val();
 
                             window.location.href += "/phaseformsubmit";
                             //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
@@ -297,7 +293,7 @@
                             var trial_num = $("#userInput1T").val();
                             var quantity = $("#userInput2T").val();
                            
-                            window.location.href += "/makeformsubmit";
+                            window.location.href += "/batchformsubmit";
                             //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                             });
                         });
@@ -363,7 +359,6 @@
                         // $("#info").append("<tr>");
                         console.log(i);
                         // $("#info").append("<th >Trial "+i+"</th>"); 
-                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; height: 30px\">Trial "+(i+1)+" Amount </th>");
                         $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; height: 30px\">Trial "+(i+1)+" Percentage</th>");
                     }
                     $("#info").append("</tr>");
@@ -381,12 +376,10 @@
                                 if (ingredients[ing][trial].length !== 0){
                                     console.log("YOOHOO");
                                     console.log(ingredients[ing][trial]);
-                                    $("#info").append("<td style=\"height: 85px\"id = 'amount/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] + "' contenteditable='true' style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\">"+ingredients[ing][trial][0]['total_amount']+"</td>");
                                     $("#info").append("<td style=\"height: 85px\"id = 'percent/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] +  "' contenteditable='true' style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\">"+ingredients[ing][trial][0]['percent_of_ingredient']+"</td>");
                                 }
                                 // ELSE SHOULD NEVER BE REACHED
                                 else {
-                                    $("#info").append("<td id = 'amount/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] + "' contenteditable='true' style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\"></td>");
                                     $("#info").append("<td id = 'percent/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] + "' contenteditable='true' style-\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\"></td>");
                                 }
 
@@ -402,9 +395,8 @@
 
                     let sumDict = JSON.parse('{{sum_data_json}}');
 
-                    for (let i = 0; i < sumDict.length; i+=2) {
-                        $("#info").append("<td style=\"height: 40px\">" + sumDict[i] + "</td>");
-                        $("#info").append("<td style=\"height: 40px\">" + sumDict[i+1] + "%</td>");
+                    for (let i = 0; i < sumDict.length; i++) {
+                        $("#info").append("<td style=\"height: 40px\">" + sumDict[i] + "%</td>");
                     }
 
                     $("#info").append("</tr>");
@@ -413,7 +405,7 @@
                     $("#info").append("<tr>");
                     for (let trial = 0; trial < trial_data; trial++) {
                         console.log(trial);
-                        $("#info").append(`<td colspan=2><a href= '#deleteTrial${trial+1}' class='material-icons modal-trigger'>delete</a></td>`);
+                        $("#info").append(`<td colspan=1><a href= '#deleteTrial${trial+1}' class='material-icons modal-trigger'>delete</a></td>`);
                     }
                     
                 
