batch button functional and units deleted

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -232,7 +232,7 @@
                     </td>
                     <td colspan = 2>
                     <div class="col s12 m4 l2">
-                        <a href="#makeTrial" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">MAKE TRIAL</a>
+                        <a href="#makeTrial" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">BATCH TRIAL</a>
                         <div class="modal" id="makeTrial">
                             <div style="padding: 5% 5% 5% 5%">
                                 {{!-- <b><span>Add a New Ingredient</span></b> --}}
@@ -260,7 +260,7 @@
 
                                        
                                         <div class="make_trial_button">
-                                            <button id = "make_trial_button" onclick="postMessage()" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">BATCH</button>
+                                            <button id = "make_trial_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">BATCH</button>
                                             {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                         </div>
                                         <p> </p>
