--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -102,7 +102,7 @@
                             <p> </p>
 
                             <b><label for="tuluble">Unit:</label></b>
-                            <input type="text" name="userInput9" id="userInput9" placeholder="Enter Unit"
+                            <input type="text" name="userInput9" id="userInput9" value="g" disabled
                                 maxlength="45" pattern="^[a-zA-Z0-9\s]*$">
                             <p> </p>
 
