batch sheet back button

--- a/views/batchsheet.hbs
+++ b/views/batchsheet.hbs
@@ -184,6 +184,8 @@
                 </div>
                     
             </div>
+            <button id = "back_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger"><a href = "/projects/" + {{project_id}}>BACK</a></button>
+
 
 
     <script>
