--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -343,7 +343,11 @@
                     
                     // var ingredientsJSON = JSON.stringify({{ingredient_dict}});
                     const ingredients = JSON.parse('{{{ingredient_dict}}}');
+                    const editable = JSON.parse('{{{editable_dict}}}');
+
                     console.log(ingredients);
+                    console.log("EDITABLE");
+                    console.log(editable);
                     // const ingredients = [ingredient1, ingredient2];
                     // const decodedString = he.decode('{{ingredient_dict}}');
                     // const ingredients = JSON.parse(decodedString);
@@ -375,8 +379,8 @@
                                 // console.log(ingredients[ing][trial][0].trial_num);
                                 if (ingredients[ing][trial].length !== 0){
                                     console.log("YOOHOO");
-                                    console.log(ingredients[ing][trial]);
-                                    $("#info").append("<td style=\"height: 85px\"id = 'percent/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] +  "' contenteditable='true' style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\">"+ingredients[ing][trial][0]['percent_of_ingredient']+"</td>");
+                                    console.log(editable[ing][trial]);
+                                    $("#info").append("<td style=\"height: 85px\"id = 'percent/trial" + (trial+1) + "/ingredient" + ingredients[ing][trial][0]['ingredient_id'] + "/phase" + ingredients[ing][trial][0]['phase'] +  "' contenteditable='" + editable[ing][trial] + "' style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 20px;\">"+ingredients[ing][trial][0]['percent_of_ingredient']+"</td>");
                                 }
                                 // ELSE SHOULD NEVER BE REACHED
                                 else {
